# claude-fleet

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: default.json
fleet_manager/: auth.py  cli.py  config.py  db.py  db.py~  mcp_server.py  notifications.py  orchestrator.py  prompt_template.py  server.py  session_launcher.py  session_launcher.py~  tmux_bridge.py  ws_manager.py
fleet_manager/api/: filesystem.py  messages.py  questions.py  sessions.py  sessions.py~
scripts/: check-js.sh  reload-server.sh
tests/: test_e2e.py  test_mcp_client.py
web/: app.js  app.js~  index.html  index.html~  style.css
