[project]
name = "claude-fleet-manager"
version = "0.1.0"
description = "Manage multiple Claude Code terminal sessions from remote clients"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mcp>=1.6.0",
    "aiofiles>=24.1.0",
    "anthropic>=0.52.0",
]

[project.scripts]
fleet = "fleet_manager.cli:main"
fleet-orchestrator = "fleet_manager.orchestrator:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fleet_manager*"]
